--- a/c1.html
+++ b/c1.html
@@ -108,7 +108,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg" style="height:40px"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -134,7 +134,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg" style="height:40px"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -160,7 +160,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c30.html"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30.jpg"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c30.html"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30.jpg" style="height:40px"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -186,7 +186,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg" style="height:40px"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -212,7 +212,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg" style="height:40px"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -238,7 +238,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg" style="height:40px"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -251,7 +251,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg" style="height:40px"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -264,7 +264,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg" style="height:40px"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -277,7 +277,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39.jpg"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39.jpg" style="height:40px"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -290,7 +290,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg" style="height:40px"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -309,9 +309,9 @@
           <div class="breadcrumb ptb_20">
             <h1>一起肉肉吧</h1>
             <ul>
-              <li><a href="index.html">首頁</a></li>
+              <!-- <li><a href="index.html">首頁</a></li>
               <li><a href="#">工程實績</a></li>
-              <li class="active">餐廳</li>
+              <li class="active">餐廳</li> -->
             </ul>
           </div>
           <!-- =====  BREADCRUMB END===== -->
@@ -346,8 +346,8 @@
               </div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="#" title="">Gogi Gogi 一起肉肉吧</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:23px"><a href="#" title="">Gogi Gogi 一起肉肉吧</a></h4>
+              <!-- <hr> -->
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
@@ -360,7 +360,7 @@
               <hr>
               <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食，豐富的韓式組合、烤肉、料理深獲在地好評</p>
 
-              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title=""  style="float:right">立即諮詢</a> 
             </div>
           </div>
           <div class="row">
