--- a/c5.html
+++ b/c5.html
@@ -58,12 +58,12 @@
               <div id="category-menu-responsive" class="navbar collapse " aria-expanded="true" style="" role="button">
                 <div class="nav-responsive">
                   <ul class="nav  main-navigation collapse in">
-                    <li><a href="#">LED廣告招牌</a></li>
-                    <li><a href="#">門牌設計製作</a></li>
-                    <li><a href="#">品牌/通路燈箱</a></li>
-                    <li><a href="#">立體字</a></li>
-                    <li><a href="#">指示牌/標示牌</a></li>
-                    <li><a href="#">雷射CNC切割</a></li>
+                    <li><a href="./p1.html">LED廣告招牌</a></li>
+                    <li><a href="./p2.html">門牌設計製作</a></li>
+                    <li><a href="./p3.html">品牌/通路燈箱</a></li>
+                    <li><a href="./p4.html">立體字</a></li>
+                    <li><a href="./p5.html">指示牌/標示牌</a></li>
+                    <li><a href="./p6.html">雷射CNC切割</a></li>
                   </ul>
                 </div>
               </div>
@@ -108,7 +108,7 @@
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg" style="height:40px"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -121,7 +121,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28a.jpg" style="height:40px"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg" style="height:40px"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -134,7 +134,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29a.jpg" style="height:40px"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29.jpg" style="height:40px"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -147,7 +147,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27a.jpg" style="height:40px"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg" style="height:40px"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -160,7 +160,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c30.html"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30a.jpg" style="height:40px"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c30.html"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30.jpg" style="height:40px"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -173,7 +173,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31a.jpg" style="height:40px"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31.jpg" style="height:40px"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -186,7 +186,7 @@
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg" style="height:40px"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -199,7 +199,7 @@
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c33.html"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33.jpg"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c33.html"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33.jpg" style="height:40px"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -212,7 +212,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34a.jpg" style="height:40px"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg" style="height:40px"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -225,7 +225,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35a.jpg" style="height:40px"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35.jpg" style="height:40px"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -238,7 +238,7 @@
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg" style="height:40px"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -251,7 +251,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37a.jpg" style="height:40px"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg" style="height:40px"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -264,7 +264,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39a.jpg" style="height:40px"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39.jpg" style="height:40px"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -277,7 +277,7 @@
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg" style="height:40px"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -290,7 +290,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38a.jpg" style="height:40px"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38a_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg" style="height:40px"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
