--- a/c7.html
+++ b/c7.html
@@ -108,7 +108,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c33.html"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33.jpg"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c33.html"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33.jpg" style="height:40px"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -121,7 +121,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg" style="height:40px"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -134,7 +134,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg" style="height:40px"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -199,7 +199,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg" style="height:40px"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -212,7 +212,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg" style="height:40px"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -225,7 +225,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35.jpg"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35.jpg" style="height:40px"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -238,7 +238,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg" style="height:40px"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -251,7 +251,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg" style="height:40px"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -264,7 +264,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg" style="height:40px"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -277,7 +277,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg" style="height:40px"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -309,9 +309,9 @@
           <div class="breadcrumb ptb_20">
             <h1>天蜜日式養生甜品</h1>
             <ul>
-              <li><a href="index.html">首頁</a></li>
+              <!-- <li><a href="index.html">首頁</a></li>
               <li><a href="#">工程實績</a></li>
-              <li class="active">甜品專賣店</li>
+              <li class="active">甜品專賣店</li> -->
             </ul>
           </div>
           <!-- =====  BREADCRUMB END===== -->
@@ -332,8 +332,8 @@
               </div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="#" title="">天蜜日式養生甜品</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:23px"><a href="#" title="">天蜜日式養生甜品</a></h4>
+              <!-- <hr> -->
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
@@ -346,7 +346,7 @@
               <hr>
               <p class="product-desc mtb_30">天蜜位於大里區鐵路街<br>為甜品專賣店</p>
 
-              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="float:right">立即諮詢</a> 
             </div>
           </div>
           <div class="row">
@@ -409,7 +409,7 @@
                 <div class="pic">
                   <div class="image product-imageblock"><img data-name="product_image" src="images/work/c7m3.jpg" alt="" title="" class="img-responsive" style="height:113px"></a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">車貼輸出</a></h6>
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">壓克力銅釦海報架</a></h6>
                   </div>
                 </div>
               </div>
