--- a/case.html
+++ b/case.html
@@ -445,7 +445,20 @@
             </div>
           </div>
         </div>
-        <h3 style="text-align:center; color:#777;">①<a href="./case2.html" style="color:#777;"> ⇨</a></h3>
+        <h3 style="text-align:center; color:#777;">
+        <!-- <a href="./case.html" style="color:#ee7800;">⇦ </a> -->
+          <a href="./case.html" style="color:#ee7800;">①</a>
+          <a href="./case2.html" style="color:#777;">②</a>
+          <a href="./case3.html" style="color:#777;">③</a>
+          <a href="./case4.html" style="color:#777;">④</a>
+          <a href="./case5.html" style="color:#777;">⑤</a>
+          <a href="./case6.html" style="color:#777;">⑥</a>
+          <a href="./case7.html" style="color:#777;">⑦</a>
+          <a href="./case8.html" style="color:#777;">⑧</a>
+          <a href="./case9.html" style="color:#777;">⑨</a>
+          <a href="./case10.html" style="color:#777;">⑩</a>
+          <a href="./case2.html" style="color:#ee7800;"> ⇨</a>
+        </h3>
         <!-- <h3 style="text-align:center;">❶⋄<a href="./case2.html" title="">②</a>⋄<a href="./case3.html" title="">③</a>⋄<a href="./case4.html" title="">④</a>⋄<a href="./case5.html" title="">⑤</a>⋄<a href="./case6.html" title="">⑥</a>⋄<a href="./case7.html" title="">⑦</a>⋄<a href="./case8.html" title="">⑧</a>⋄<a href="./case9.html" title="">⑨</a>⋄<a href="./case10.html" title="">⑩</a></h3> -->
         <br>
       </div>
