--- a/c2.html
+++ b/c2.html
@@ -108,7 +108,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c33.html"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33.jpg"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c33.html"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33.jpg" style="height:40px"> <img class="img-responsive" title="欣姿娜" alt="" src="images/work/L33_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -147,7 +147,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29.jpg"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29.jpg" style="height:40px"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -173,7 +173,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31.jpg"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31.jpg" style="height:40px"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -186,7 +186,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg" style="height:40px"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -199,7 +199,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c32.html"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32.jpg" style="height:40px"> <img class="img-responsive" title="杭締" alt="" src="images/work/L32_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -212,7 +212,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg" style="height:40px"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -225,7 +225,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35.jpg"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35.jpg" style="height:40px"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -238,7 +238,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c36.html"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36.jpg" style="height:40px"> <img class="img-responsive" title="迎曦診所" alt="" src="images/work/L36_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -251,7 +251,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg" style="height:40px"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -264,7 +264,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg" style="height:40px"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -309,9 +309,9 @@
           <div class="breadcrumb ptb_20">
             <h1>一拳咖啡</h1>
             <ul>
-              <li><a href="index.html">首頁</a></li>
+              <!-- <li><a href="index.html">首頁</a></li>
               <li><a href="#">工程實績</a></li>
-              <li class="active">咖啡廳</li>
+              <li class="active">咖啡廳</li> -->
             </ul>
           </div>
           <!-- =====  BREADCRUMB END===== -->
@@ -338,8 +338,8 @@
               </div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="#" title="">一拳咖啡</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:23px"><a href="#" title="">一拳咖啡</a></h4>
+              <!-- <hr> -->
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
@@ -352,7 +352,7 @@
               <hr>
               <p class="product-desc mtb_30">一拳咖啡位於北區梅庭街，為舒芙蕾及鬆餅專賣店，選用日本進口麵粉<br>小農鮮奶及台灣牧場元氣蛋，口感綿密鬆軟，入口即化</p>
 
-              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="float:right">立即諮詢</a> 
             </div>
           </div>
           <div class="row">
