--- a/c9.html
+++ b/c9.html
@@ -6,7 +6,7 @@
 <head>
   <!-- =====  BASIC PAGE NEEDS  ===== -->
   <meta charset="utf-8">
-  <title>天承軒手工饅頭</title>
+  <title>日月松林</title>
   <!-- =====  SEO MATE  ===== -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="description" content="">
@@ -118,10 +118,10 @@
                     </div>
                   </div>
                 </li>
-                <!-- <li class="item product-layout-left mb_20">
+                <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg" style="height:40px"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -130,11 +130,11 @@
                       <h6 class="product-name">實績分類：傢俱店</h6>
                     </div>
                   </div>
-                </li> -->
-                <!-- <li class="item product-layout-left mb_20">
+                </li>
+                <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c26.html"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26.jpg" style="height:40px"> <img class="img-responsive" title="赤腳丫" alt="" src="images/work/L26_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -143,11 +143,11 @@
                       <h6 class="product-name">實績分類：生態農莊</h6>
                     </div>
                   </div>
-                </li> -->
-                <li class="item product-layout-left mb_20">
+                </li>
+                <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29.jpg" style="height:40px"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29.jpg"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29_2.jpg"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -156,7 +156,7 @@
                       <h6 class="product-name">實績分類：披薩店</h6>
                     </div>
                   </div>
-                </li>
+                </li> -->
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
@@ -170,10 +170,10 @@
                     </div>
                   </div>
                 </li> -->
-                <li class="item product-layout-left mb_20">
+                <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31.jpg" style="height:40px"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31.jpg"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31_2.jpg"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -182,11 +182,11 @@
                       <h6 class="product-name">實績分類：公司行號</h6>
                     </div>
                   </div>
-                </li>
-                <li class="item product-layout-left mb_20">
+                </li> -->
+                <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg" style="height:40px"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg" style="height:40px"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -195,7 +195,7 @@
                       <h6 class="product-name">實績分類：小吃店</h6>
                     </div>
                   </div>
-                </li>
+                </li> -->
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
@@ -274,10 +274,10 @@
                     </div>
                   </div>
                 </li>
-                <!-- <li class="item product-layout-left mb_20">
+                <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c40.html"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40.jpg" style="height:40px"> <img class="img-responsive" title="政禾診所" alt="" src="images/work/L40_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -286,7 +286,7 @@
                       <h6 class="product-name">實績分類：診所</h6>
                     </div>
                   </div>
-                </li> -->
+                </li>
                 <!-- <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
@@ -307,49 +307,46 @@
         <div class="col-sm-8 col-md-8 col-lg-9 mtb_30">
           <!-- =====  BANNER STRAT  ===== -->
           <div class="breadcrumb ptb_20">
-            <h1>天承軒手工饅頭</h1>
+            <h1>日月松林</h1>
             <ul>
               <!-- <li><a href="index.html">首頁</a></li>
               <li><a href="#">工程實績</a></li>
-              <li class="active">手工饅頭專賣店</li> -->
+              <li class="active">度假營地</li> -->
             </ul>
           </div>
           <!-- =====  BREADCRUMB END===== -->
           <div class="row mt_10 ">
             <div class="col-md-6">
-              <div><a class="thumbnails"> <img style="" data-name="product_image" src="images/work/c6m.jpg" alt="" /></a></div>
+              <div><a class="thumbnails"> <img style="" data-name="product_image" src="images/work/c9m.jpg" alt="" /></a></div>
 
               <div id="product-thumbnail" class="owl-carousel">
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c6m1.jpg" data-fancybox="group1"> <img src="images/work/c6m1.jpg" title="玻璃貼輸出" style="height:60px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c9m1.jpg" data-fancybox="group1"> <img src="images/work/c9m1.jpg" title="壓克力標示牌" style="height:60px" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c6m2.jpg" data-fancybox="group1"> <img src="images/work/c6m2.jpg" title="木頭雕刻招牌" style="height:60px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c9m2.jpg" data-fancybox="group1"> <img src="images/work/c9m2.jpg" title="鋁板標示牌" style="height:60px" /></a></div>
                 </div>
                 <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c6m3.jpg" data-fancybox="group1"> <img src="images/work/c6m3.jpg" title="車貼輸出" style="height:60px" /></a></div>
-                </div>
-                <div class="item">
-                  <div class="image-additional"><a class="thumbnail" href="images/work/c6m4.jpg" data-fancybox="group1"> <img src="images/work/c6m4.jpg" title="木頭+鐵架 A字立招" style="height:60px" /></a></div>
+                  <div class="image-additional"><a class="thumbnail" href="images/work/c9m3.jpg" data-fancybox="group1"> <img src="images/work/c9m3.jpg" title="不銹鋼鍍鈦字" style="height:60px" /></a></div>
                 </div>
               </div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name" style="font-size:23px"><a href="#" title="">天承軒手工饅頭</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:23px"><a href="#" title="">日月松林</a></h4>
               <!-- <hr> -->
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 手工饅頭專賣店</span></li>
+                  <span> 度假營地</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>玻璃貼輸出、木頭雕刻招牌、車貼輸出</span>
+                  <span>壓克力標示牌、鋁板標示牌、不銹鋼鍍鈦字</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">天承軒位於西區華美街<br>為手工饅頭專賣店</p>
+              <p class="product-desc mtb_30">日月松林營地位於南投縣魚池鄉<br>是著名的度假露營景點</p>
 
-              <a class="btn" href="./order.html" title="" style="float:right">立即諮詢</a> 
+              <a class="btn" href="./order.html" title="" style="float:right">立即諮詢</a>
             </div>
           </div>
           <div class="row">
@@ -362,22 +359,22 @@
                 </ul>
                 <div class="tab-content mt_20">
                   <div class="tab-pane active" id="1c">
-                    <p>天承軒位於西區華美街，為手工饅頭專賣店</p>
+                    <p>日月松林營地位於南投縣魚池鄉，是著名的度假露營景點</p>
                     <br>
-                    <p>🔺#玻璃貼輸出🔺</p>
-                    <p>整面滿版的玻璃貼輸出，呈現出一氣呵成的整體感，搭配仿手寫字體與生動插圖，給人誠懇樸實的印象。</p>
-                    <p>🔺#木頭雕刻招牌🔺</p>
-                    <p>陰刻的楷書字體，力求傳達給客戶一絲不苟的職人態度，左側的類印章紅字，強調了手工的獨特，有畫龍點睛之效。</p>
-                    <p>🔺#車貼輸出🔺</p>
-                    <p>在機動性強的車身側面，加上一體式的車貼輸出，不但讓人一目了然，同時也是極有效果的活廣告。</p>
+                    <p>🔺#壓克力標示牌🔺</p>
+                    <p>壓克力材質適合長時間放置於戶外，並以醒目的紫色作為主色系。</p>
+                    <p>🔺#鋁板標示牌🔺</p>
+                    <p>以紫色為主的簡易金屬標示，並透過色調對比顯示出主題及方向。</p>
+                    <p>🔺#不銹鋼鍍鈦字🔺</p>
+                    <p>金屬字可以呈現出獨特的質感，而書法體更能襯托出字面的渾厚蒼勁。</p>
                     <br>
                     <p>快得力提供您造型多元、宣傳便利，適應於不同類型之招牌運用，也觀迎您提出更多的需求，相信專業團隊，就找快得力廣告。</p>
                   </div>
                   <div class="tab-pane" id="3c">
-                    <p>天承軒手工饅頭</p>
-                    <p>地址：台中市西區華美街92號</p>
-                    <p>電話：04-23762116</p>
-                    <p>時間：1000-1730</p>
+                    <p>日月松林營地</p>
+                    <p>地址：南投縣魚池鄉有水巷21-41號</p>
+                    <p>電話：0905-140950</p>
+                    <p>時間：1000-2200</p>
                   </div>
                 </div>
               </div>
@@ -394,33 +391,25 @@
             <div class="product-layout product-grid related-pro owl-carousel mb_50">
               <div class="item">
                 <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c6m1.jpg" alt="" title="" class="img-responsive"></a> </div>
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c9m1.jpg" alt="" title="" class="img-responsive"></a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">玻璃貼輸出</a></h6>
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">壓克力標示牌</a></h6>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c6m2.jpg" alt="" title="" class="img-responsive"></a></div>
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c9m2.jpg" alt="" title="" class="img-responsive"></a></div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p1.html" title="">木頭雕刻招牌</a></h6>
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">鋁板標示牌</a></h6>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c6m3.jpg" alt="" title="" class="img-responsive"></a> </div>
+                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c9m3.jpg" alt="" title="" class="img-responsive" style="height:113px"></a> </div>
                   <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p5.html" title="">車貼輸出</a></h6>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="pic">
-                  <div class="image product-imageblock"><img data-name="product_image" src="images/work/c6m4.jpg" alt="" title="" class="img-responsive" style="height:115px"></div>
-                  <div class="caption product-detail text-left">
-                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p1.html" title="">木頭+鐵架 A字立招</a></h6>
+                    <h6 data-name="product_name" class="product-name mt_20"><a href="./p4.html" title="">不銹鋼鍍鈦字</a></h6>
                   </div>
                 </div>
               </div>
