--- a/case3.html
+++ b/case3.html
@@ -108,6 +108,58 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c23.html"> <img class="img-responsive" title="台灣三軸" alt="" src="images/work/L23.jpg"> <img class="img-responsive" title="台灣三軸" alt="" src="images/work/L23_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c23.html">台灣三軸</a></h4>
+                      <h6 class="product-name">實績分類：公司行號</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c24.html"> <img class="img-responsive" title="西屯區公所" alt="" src="images/work/L24.jpg"> <img class="img-responsive" title="西屯區公所" alt="" src="images/work/L24_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c24.html">西屯區公所</a></h4>
+                      <h6 class="product-name">實績分類：公家機關</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c17.html"> <img class="img-responsive" title="老賴" alt="" src="images/work/L17.jpg"> <img class="img-responsive" title="老賴" alt="" src="images/work/L17_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c17.html">老賴</a></h4>
+                      <h6 class="product-name">實績分類：手搖飲料店</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c18.html"> <img class="img-responsive" title="艾格創意" alt="" src="images/work/L18.jpg"> <img class="img-responsive" title="艾格創意" alt="" src="images/work/L18_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c18.html">艾格創意</a></h4>
+                      <h6 class="product-name">實績分類：設計公司</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
                       <div class="image product-imageblock"> <a href="c21.html"> <img class="img-responsive" title="USD" alt="" src="images/work/L21.jpg"> <img class="img-responsive" title="USD" alt="" src="images/work/L21_2.jpg"> </a> </div>
                     </div>
                   </div>
@@ -144,32 +196,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c17.html"> <img class="img-responsive" title="老賴" alt="" src="images/work/L17.jpg"> <img class="img-responsive" title="老賴" alt="" src="images/work/L17_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c17.html">老賴</a></h4>
-                      <h6 class="product-name">實績分類：手搖飲料店</h6>
-                    </div>
-                  </div>
-                </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c18.html"> <img class="img-responsive" title="艾格創意" alt="" src="images/work/L18.jpg"> <img class="img-responsive" title="艾格創意" alt="" src="images/work/L18_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c18.html">艾格創意</a></h4>
-                      <h6 class="product-name">實績分類：設計公司</h6>
-                    </div>
-                  </div>
-                </li>
+                
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
@@ -209,32 +236,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c23.html"> <img class="img-responsive" title="台灣三軸" alt="" src="images/work/L23.jpg"> <img class="img-responsive" title="台灣三軸" alt="" src="images/work/L23_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c23.html">台灣三軸</a></h4>
-                      <h6 class="product-name">實績分類：公司行號</h6>
-                    </div>
-                  </div>
-                </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c24.html"> <img class="img-responsive" title="西屯區公所" alt="" src="images/work/L24.jpg"> <img class="img-responsive" title="西屯區公所" alt="" src="images/work/L24_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c24.html">西屯區公所</a></h4>
-                      <h6 class="product-name">實績分類：公家機關</h6>
-                    </div>
-                  </div>
-                </li>
+                
               </ul>
             </div>
           </div>
@@ -252,43 +254,43 @@
           <!-- =====  BREADCRUMB END===== -->
           <div class="row mt_10">
             <div class="col-md-6">
-              <div><a class="thumbnails" href="./c5.html"> <img class="" style="" data-name="product_image" src="images/work/c5m.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c9.html"> <img class="" style="" data-name="product_image" src="images/work/c9m.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c5.html" title="">京典臻品</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c9.html" title="">日月松林</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 水晶飾品店</span></li>
+                  <span> 度假營地</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>正發光立體字、背光無邊立體字、不銹鋼造型門牌</span>
+                  <span>壓克力標示牌、鋁板標示牌、不銹鋼鍍鈦字</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">京典臻品位於西屯區福雅路<br>是天然水晶礦石專賣店</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c5.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">日月松林營地位於南投縣魚池鄉<br>是著名的度假露營景點</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c9.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
           <div class="row mt_10 ">
             <div class="col-md-6" style="margin-top:30px">
-              <div><a class="thumbnails" href="./c6.html"> <img style="" data-name="product_image" src="images/work/c6m.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c10.html"> <img style="" data-name="product_image" src="images/work/c10m.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c6.html" title="">天承軒手工饅頭</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c10.html" title="">月光石</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 手工饅頭專賣店</span></li>
+                  <span> 餐酒館</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>玻璃貼輸出、木頭雕刻招牌、車貼輸出</span>
+                  <span>壓克力立體字、玻璃卡典西德、卡典西德燈箱</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">天承軒位於西區華美街<br>為手工饅頭專賣店</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c6.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">月光石餐酒館位於北屯區文心路四段<br>是氣氛頗佳的西式餐廳</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c10.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
@@ -335,10 +337,10 @@
           </div>
         </div>
         <h3 style="text-align:center; color:#777;">
-          <a href="./case.html" style="color:#ee7800;">⇦ </a>
+          <a href="./case2.html" style="color:#ee7800;">⇦ </a>
           <a href="./case.html" style="color:#777;">①</a>
-          <a href="#" style="color:#ee7800;">②</a>
-          <a href="./case3.html" style="color:#777;">③</a>
+          <a href="./case2.html" style="color:#777;">②</a>
+          <a href="#" style="color:#ee7800;">③</a>
           <a href="./case4.html" style="color:#777;">④</a>
           <a href="./case5.html" style="color:#777;">⑤</a>
           <a href="./case6.html" style="color:#777;">⑥</a>
@@ -346,7 +348,7 @@
           <a href="./case8.html" style="color:#777;">⑧</a>
           <a href="./case9.html" style="color:#777;">⑨</a>
           <a href="./case10.html" style="color:#777;">⑩</a>
-          <a href="./case3.html" style="color:#ee7800;"> ⇨</a>
+          <a href="./case4.html" style="color:#ee7800;"> ⇨</a>
         </h3>
         <!-- <h3 style="text-align:center;">❶⋄<a href="./case2.html" title="">②</a>⋄<a href="./case3.html" title="">③</a>⋄<a href="./case4.html" title="">④</a>⋄<a href="./case5.html" title="">⑤</a>⋄<a href="./case6.html" title="">⑥</a>⋄<a href="./case7.html" title="">⑦</a>⋄<a href="./case8.html" title="">⑧</a>⋄<a href="./case9.html" title="">⑨</a>⋄<a href="./case10.html" title="">⑩</a></h3> -->
         <br>
